--- a/.gitignore
+++ b/.gitignore
@@ -133,4 +133,17 @@ iOSInjectionProject/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 
+# Created by https://www.toptal.com/developers/gitignore/api/cocoapods
+# Edit at https://www.toptal.com/developers/gitignore?templates=cocoapods
+
+### CocoaPods ###
+## CocoaPods GitIgnore Template
+
+# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
+#           - Also handy if you have a large number of dependant pods
+#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
+Pods/
+
+
+
 # End of https://www.toptal.com/developers/gitignore/api/xcode,swift,macos
